feat: Log auth requests
Updated logic in authentication-service to log auth requests.

--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -39,7 +39,7 @@
     let logBtn = document.getElementById("logBtn");
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
-    let received = document.getElementById("received");
+    let recevied = document.getElementById("received");
 
     logBtn.addEventListener("click", function() {
         const payload = {
@@ -47,41 +47,6 @@
             log: {
                 name: "event",
                 data: "Some kind of data",
-            }
-        }
-
-        const headers = new Header();
-        headers.append("Content-Type", "application/json");
-
-        const body = {
-            method = "POST",
-            body: JSON.stringify(payload),
-            headers: headers,
-        }
-
-        fetch("http://localhost:8080/handle", body)
-        .then((response) => response.json())
-        .then((data) => {
-            sent.innerHTML = JSON.stringify(payload, undefined, 4);
-            received.innerHTML = JSON.stringify(data, undefined, 4);
-            if (data.error) {
-                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`
-            } else {
-                output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
-            }
-        })
-        .catch((error) => {
-            output.innerHTML += "<br><br>Error: " + error;
-        })
-    })
-
-    authBrokerBtn.addEventListener("click", function() {
-        
-        const payload = {
-            action: "auth",
-            auth: {
-                email: "admin@example.com",
-                password: "verysecret",
             }
         }
 
@@ -94,19 +59,54 @@
             headers: headers,
         }
 
-        fetch("http://localhost:8080/handle", body)
+        fetch("http:\/\/localhost:8080/handle", body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = JSON.stringify(payload, undefined, 4);
             received.innerHTML = JSON.stringify(data, undefined, 4);
             if (data.error) {
-                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`
+                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
             } else {
                 output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
             }
         })
         .catch((error) => {
-            output.innerHTML += "<br><br>Error: " + error;
+            output.innerHTML += "<br><br>Eror: " + error;
+        })        
+    })
+
+    authBrokerBtn.addEventListener("click", function() {
+
+        const payload = {
+            action: "auth",
+            auth: {
+                email: "admin@example.com",
+                password: "verysecret",
+            }
+        }
+
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json");
+
+        const body = {
+            method: 'POST',
+            body: JSON.stringify(payload),
+            headers: headers,
+        }
+
+        fetch("http:\/\/localhost:8080/handle", body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data, undefined, 4);
+            if (data.error) {
+                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
+            } else {
+                output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+            }
+        })
+        .catch((error) => {
+            output.innerHTML += "<br><br>Eror: " + error;
         })
     })
 
